rhi: d3d11: Flush() when destroying a swapchain

Task-number: QTBUG-120276
Pick-to: 6.5
Change-Id: Iaf79c4dcf60d9a52bd562fd94976402cf570147d
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit cff5a49cc20c3c9d98a5f97cd702a378ae29611b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit eb3529ea3554642c65402b89e39416bf657170d8)